# asap

./: CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile  SConstruct  getgitrev.sh  install_osx.sh  scons_ext.py  setup.py
admin/: asapv2_design.sxw  log2req.pl  reqmatrix.sxc  reqtable.tex  requirements2.tex
apps/: CMakeLists.txt  SConscript  asap2to3.cpp  test.cpp
bugs/: README  asap0000.txt  asap0001.txt  asap0002.txt  asap0003.txt  asap0004.txt  asap0005.txt  asap0006.txt  asap0007.txt  asap0008.txt  asap0009.txt  asap0010.txt  asap0011.txt  asap0012.txt  asap0013.txt  asap0014.txt  asap0015.txt  asap0016.txt  asap0017.txt  asap0018.txt  asap0019.txt  asap0020.txt
cmake/: FindPGPLOT.cmake  casacore2.cmake  exec_getsvnrev.sh  standalone.cmake  withcasa.cmake
debian/: control  rules
distutils/: scons_ext.py  setup.cfg  setup.py  setupext.py
doc/: CHANGELOG  Makefile  README  SConscript  cookbook.tex  cookbook.txt  release-checklist.txt  userguide.tex
examples/: test.py
external-alma/: Makefile
packaging/: setup.py
python/: SConscript  __init__.py  asapfit.py  asapfitter.py  asapgrid.py  asaplinefind.py  asaplot.py  asaplotbase.py  asaplotgui.py  asaplotgui_gtk.py  asaplotgui_qt4.py  asapmath.py  asapplotter.py  asapreader.py  casatoolbar.py  coordinate.py  customgui_base.py  customgui_qt4agg.py  customgui_tkagg.py  edgemarker.py  env.py  flagplotter.py  flagtoolbar.py  interactivemask.py  lagflagger.py  linecatalog.py  logging.py  notationwindow.py  opacity.py  parameters.py  plotter2.py  sbseparator.py  scantable.py  selector.py  utils.py
(+298 files in other folders)
